<resources>
    <string name="app_name">BrazmasCheckIn</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="eventname">EventName</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">SUBMIT</string>
    <string name="qr_code_option">QR code option</string>
    <string name="limit_attendees">limit attendees</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="check_in_count">Check In Count</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="attendee_limit">Attendee Limit</string>
    <string name="geolocation_verification">Geolocation Verification</string>
    <string name="choose_location">Choose Location</string>
    <string name="location">Location:</string>
    <string name="generate_promotional_qr_code">Generate Promotional QR code</string>
    <string name="choose_image">Choose Image</string>
    <string name="event_poster">Event Poster</string>
    <string name="add_event">Add Event</string>
    <string name="attending">Attending</string>
    <string name="placeholder_date">January 1, 1970</string>
    <string name="date_label">Date:</string>
    <string name="attendee_check_in_locations">Attendee Check-In Locations</string>
    <string name="attendee_sign_ups">Attendee Sign-Ups</string>
    <string name="attendee_check_ins">Attendee Check-Ins</string>
    <string name="event_qr_code">Event QR Code</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="notify">Notify</string>
    <string name="promotional_code">Promotional code</string>
    <string name="check_in_code">Check-in code</string>
    <string name="check_in_map">Check-In Map</string>
    <string name="all_events">All Events</string>
    <string name="organized_events">Organized Events</string>
    <string name="share_qr_code_button_text">Share</string>
    <string name="promotional_qr_code">Promotional QR code</string>
    <string name="check_ins">Check Ins</string>
    <string name="attendee_name">Attendee Name</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="delete_event">Delete Event</string>
    <string name="event_analytics">Event Analytics</string>
</resources>