<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/view_event_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:layout_centerHorizontal="true"
            android:textSize="35sp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            />

        <CheckBox
            android:id="@+id/view_event_signed_up_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attending"
            android:layout_below="@id/view_event_name_tv"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="25dp"
            />

        <TextView
            android:id="@+id/view_event_social_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TODO: implmenet following"
            android:layout_below="@id/view_event_name_tv"
            android:layout_toEndOf="@id/view_event_signed_up_cb"
            />

        <ImageView
            android:id="@+id/view_event_poster_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_event_signed_up_cb"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/event_poster" />

        <TextView
            android:id="@+id/view_event_date_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/view_event_poster_iv"
            />
        <TextView
            android:id="@+id/view_event_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/view_event_poster_iv"
            android:text="@string/placeholder_date"
            android:layout_toEndOf="@id/view_event_date_title_tv"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/view_event_description_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/view_event_date_tv"
            />

        <TextView
            android:id="@+id/view_event_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:layout_below="@id/view_event_date_tv"
            android:layout_toEndOf="@id/view_event_description_title_tv"
            android:maxLines="5"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/view_event_map_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/attendee_check_in_locations"
            android:layout_below="@id/view_event_description_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/view_event_see_signed_up_attendees_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/attendee_sign_ups"
            android:layout_below="@id/view_event_map_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/view_event_see_checked_in_attendees_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/attendee_check_ins"
            android:layout_below="@id/view_event_see_signed_up_attendees_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            />

        <ImageView
            android:id="@+id/view_event_QR_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_event_see_checked_in_attendees_btn"
            android:contentDescription="@string/event_qr_code"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</ScrollView>