<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_info_linearlayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <EditText
            android:id="@+id/main_firstname_textview"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/first_name"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/main_lastname_textview"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/last_name"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/main_submit_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/submit"
            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>