<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigationView"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:elevation="2dp"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30dp"
        app:itemTextColor="@drawable/item_selector"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_picture_card"
        app:cardCornerRadius="100dp"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="199dp"
        android:layout_height="60dp"
        android:layout_below="@+id/profile_picture_card"
        android:layout_alignStart="@+id/profile_picture_card"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="" />

    <TextView
        android:id="@+id/event_text_view_admin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:backgroundTint="@color/lightPink"
        android:ems="10"
        android:text="Profile"
        android:textSize="40sp"
        android:gravity="center"
        android:background="@color/lightPink"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/lightPink"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="Edit Profile" />

    <LinearLayout
        android:id="@+id/profile_geolocation_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_profile_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/profile_geolocation_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:text="Geolocation: "
            />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_geolocation_sw"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_geolocation_extra_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/profile_geolocation_ll"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:visibility="gone"
        >

        <Button
            android:textColor="@color/black"
            android:backgroundTint="@color/lightPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:id="@+id/profile_geolocation_attendee_checkins_btn"
            android:text="@string/check_ins"
            tools:ignore="HardcodedText" />

        <Button
            android:textColor="@color/black"
            android:backgroundTint="@color/lightPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:id="@+id/profile_geolocation_all_events_btn"
            android:text="@string/all_events"
            />

        <Button
            android:textColor="@color/black"
            android:backgroundTint="@color/lightPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:id="@+id/profile_geolocation_organized_events_btn"
            android:text="@string/organized_events"
            />


    </LinearLayout>
</RelativeLayout>
